rgw: set correct storage class for append

fix https://tracker.ceph.com/issues/42444

Signed-off-by: yuliyang <yuliyang@cmss.chinamobile.com>
(cherry picked from commit ef3ec2e56236fb031ddd4404121449c656a62481)

Conflicts:
	src/rgw/rgw_putobj_processor.cc
- cur_manifest assignment looks different in nautilus